<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World</string>
    <string name="app_name">v5t11</string>
    <string name="kurse_button">Lokomotive auswählen</string>
    <string name="begruessung">Willkommen bei der GEDOPLAN Eisenbahnsteuerung!\n\n</string>
    <string name="zurueck">zurück</string>
     <string name="button_richtung_aendern_rueckwaerts">Richtung ändern (Aktuell vorwärts)</string>
      <string name="button_richtung_aendern_vorwaerts">Richtung ändern (Aktuell rückwärts)</string>
     <string name="button_licht_anschalten">Licht anschalten</string>
     <string name="button_licht_ausschalten">Licht ausschalten</string>
     <string name="button_nothalt">Nothalt</string>
      <string name="button_anlagen_starten">Anlage einschalten</string>

</resources>
