<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffffff"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:text="@string/hello">
    <LinearLayout 
    android:id="@+id/linearLayout1" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent" 
    android:orientation="vertical">
        <ImageView 
        android:src="@drawable/logo" 
        android:layout_height="wrap_content" 
        android:id="@+id/imageButton1" 
        android:layout_width="wrap_content" 
        android:layout_gravity="center_horizontal"/>
        <TextView 
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#ff000000"
        android:text="@string/begruessung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        
        />
        <Button 
        android:text="@string/kurse_button" 
        android:width="200dp"
        android:layout_width="wrap_content" 
        android:layout_gravity="center_horizontal" 
        android:layout_height="wrap_content" 
        android:id="@+id/kurse_button"/>

        <TextView
            android:id="@+id/serverUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
   
</ScrollView>

